--- a/config/file.ini
+++ b/config/file.ini
@@ -1,10 +1,10 @@
 [dicom]
-data_path_dicom = C:/...
-output_path = C:/...
-resources_path = C:/...
+data_path_dicom = C:\Users\lfsanchez\OneDrive - Universidad Pontificia Comillas\COMILLAS\Workspace\corticalMeasurement\data\
+output_path = C:\Users\lfsanchez\OneDrive - Universidad Pontificia Comillas\COMILLAS\Workspace\corticalMeasurement\out\
+resources_path = C:\Users\lfsanchez\OneDrive - Universidad Pontificia Comillas\COMILLAS\Workspace\corticalMeasurement\resources\
 
 [pre-process]
-spacing = [0.5,0.25,0.25]
+spacing = [1,1,1]
 threshold = 50
 extract = []
 size = 60
@@ -21,12 +21,11 @@ convert_stl = True
 num_views_thickness = 9
 
 [all dicom]
-reference_bone = C:/...
+reference_bone = C:\Users\lfsanchez\OneDrive - Universidad Pontificia Comillas\COMILLAS\Workspace\corticalMeasurement\out\stl\leg1.stl
 
 [reference vectors]
-orientation_vector = [0.6589270872271564, 0.7522068157882746]
-alignment_vector = [0.08735337108373642, 0.0930023342370987, 0.991826593875885]
+orientation_vector = [0.6550051833573929, 0.7556243840526509]
+alignment_vector = [-0.08501939475536346, -0.09431281685829163, -0.9919056296348572]
 
 [retake]
-# legX = value_change_leg, value_Correct_direction_manually
 
