change files names

--- a/config/file.ini
+++ b/config/file.ini
@@ -21,11 +21,11 @@ convert_stl = True
 num_views_thickness = 9
 
 [all dicom]
-reference_bone = C:\Users\lfsanchez\OneDrive - Universidad Pontificia Comillas\COMILLAS\Workspace\corticalMeasurement\out\stl\leg1.stl
+reference_bone = C:\Users\lfsanchez\OneDrive - Universidad Pontificia Comillas\COMILLAS\Workspace\corticalMeasurement\out\stl\TAC A.stl
 
 [reference vectors]
-orientation_vector = [0.6550051833573929, 0.7556243840526509]
-alignment_vector = [-0.08501939475536346, -0.09431281685829163, -0.9919056296348572]
+orientation_vector = [0.6569529693106889, 0.7539315593035413]
+alignment_vector = [-0.08496023714542389, -0.09431631118059158, -0.9919103980064392]
 
 [retake]
 
