replace tac names

--- a/config/file.ini
+++ b/config/file.ini
@@ -28,4 +28,6 @@ orientation_vector = [0.6569529693106889, 0.7539315593035413]
 alignment_vector = [-0.08496023714542389, -0.09431631118059158, -0.9919103980064392]
 
 [retake]
-
+# legX = value_change_leg, value_Correct_direction_manually
+# TAC B=1.0, 0
+TAC B=1.0, 0
